--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 As a photographer, I'm drawn to the vibrant hues of the world around me, capturing the essence of
                 landscapes, wildlife, street scenes, and the delicious artistry of food. Inspired by the beauty of
                 nature and the thrill of travel, I aim to tell stories through my images, evoking emotions and
-                documenting the diverse cultures we encounter. My goal is to showcase the world's vibrant tapestry,
+                documenting the diverse cultures we encounter. My goal is to showcase the world's vibrant nature,
                 inviting viewers to explore its rich tapestry through the lens of my camera.
             </p>
         </div>
